--- a/STARMarket/STARMarket.csproj
+++ b/STARMarket/STARMarket.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{63F78D46-D60A-47F6-AB0F-63CCBB91C441}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>STARMakert</RootNamespace>
-    <AssemblyName>STARMakert</AssemblyName>
+    <RootNamespace>STARMarket</RootNamespace>
+    <AssemblyName>STARMarket</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
